# SnakeMail

./: .gitignore  Logg.txt  Project_README.md  README.md
Backend/: README.md  app.py  requirements.txt  sentiment.py  summarize.py
extension/: README.md  manifest.json
extension/web/: README.md  popup.html  popup.js  style.css
extension/web/JS/: background.js  content_script.js
rustmailer-extention/: Logg.txt  README.md  manifest.json
rustmailer-extention/web/: popup.html  popup.js
rustmailer-extention/web/JS/: content_script.js
rustmailer-wasm/: .gitignore  Cargo.toml  Logg.txt  README.md
rustmailer-wasm/src/: lib.rs  text_processor.rs
