[package]
name = "rustmailer-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
#Gör det möjligt att göra Rust funktioner till JS via WASM.
wasm-bindgen = "0.2"
#Används för att skapa och bryta ner Json objekt.
serde ={ version = "1.0",features = ["derive"]}
serde_json = "1.0"
#Tch används av rust-bert för att köra modellerna som vi kommer köra för att ta fram sentiment och en summering av texten.
rust-bert = {version = "0.23"}
tch = {version = "0.17.0",default-features = false} 

[lib]
#Anger att biblioteket ska byggas efter WASM.
crate-type = ["cdylib","rlib"]

[profile.release]
#Optimerar för minsta storlek.
opt-level = "z" 